# Forecast-WorldCupPredictor

./: .env.example  .gitignore  .vercelignore  README.md  vercel.json
.github/workflows/: ci.yml  (+1 more)
backend/: main.py  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py  paths.py  seed_data.py  settings.py
backend/app/api/: routes_accuracy.py  routes_bracket.py  routes_dashboard.py  routes_forecast.py  routes_matches.py  routes_standings.py  routes_teams.py
backend/app/data/: SOURCES.md  fixtures.csv  groups.csv  source_snapshot.json  third_place_combinations.csv
backend/app/models/: __init__.py  database.py  forecast.py  match.py  prediction.py  sync_status.py  team.py
backend/app/services/: __init__.py  accuracy_service.py  bracket_service.py  forecast_service.py  knockout_predictions.py  knockout_schedule.py  knockout_state.py  live_sync.py  match_model.py  model_parameters.py  ratings.py  simulator.py  standings.py
backend/tests/: test_accuracy_service.py  test_api.py  test_history_contract.py  test_knockout_prediction_locking.py  test_knockout_schedule.py  test_live_forecast.py  test_live_sync_transactions.py  test_match_model.py  test_ratings.py  test_simulator.py  test_standings.py
data/: SOURCES.md  fixtures.csv  model_parameters.json  results.csv  source_snapshot.json  teams.csv
frontend/: next.config.ts  package-lock.json  package.json
scripts/: backfill_forecast_history.py  bootstrap_database.py  build_data_snapshot.py  calibrate_model.py  extract_third_place_table.py  fetch_source_data.py  sync_live_data.py  watch_live_data.py
(+29 files in other folders)
