[project]
name = "forecast-worldcup-backend"
version = "0.1.0"
description = "FastAPI backend for the World Cup predictor"
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.138.0",
  "uvicorn[standard]==0.41.0",
  "sqlalchemy==2.0.51",
  "psycopg[binary]==3.3.3",
  "pydantic==2.13.4",
  "pytest==9.1.1",
  "httpx==0.28.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]